# av_imgdata

./: .gitignore  INFO.sh  LICENSE  Makefile  README.md  README.md.bak  face_matcher.patch  fix_checks_findings_stop_action_test_v2.py  fix_checks_scan_start_progress_state.py  optimierung.md  pytest.ini  repair_search_photo_face_result_entry_init_v4.py  support.yaml  worker-api-state.json
SynoBuildConf/: build  depends  install
app/: main.py
conf/: privilege  resource
docs/: ARCHITECTURE_AND_DEVELOPMENT_GUIDELINES.md  IPTC_FACE_METADATA_EXTENSION_CONCEPT.md  IPTC_FACE_METADATA_INTEGRATION_CONCEPT.md  MUSIC_EXTENSION_CONCEPT.md  OPTIMIZATION_MODERNIZATION_PLAN.md  OPTIMIZATION_PLAN.md  TRAY_STATUS_CONCEPT.md  architecture-and-development-guidelines.md  external-worker-gui-coverage.md  external-worker-platform-contract.md  face-model-governance.md  insightface-native-libraries-and-build.md  insightface-native-processor-replacement.md  konzept_gesichtsrahmen_standardisierung_insightface.md  konzept_gesichtswiedererkennung_insightface_photos_personen.md  libvips-native-image-processor.md  libvips-optional-image-backend-concept.md  native-face-processor-status-concept.md  optimization-modernization-plan.md  optimization-modernization-reassessment.md  optimization-modernization.md  optional-worker-concept.md  pip-package-plugin-system-concept.md  qt6-worker-gui-lgpl-concept.md  status-concept-integrated.md  worker-runtime-governance.md
examples/: libvips_processor_examples.py
processor_contract/: README.md
processor_contract/schemas/: face-native-job-input.schema.json  face-native-result.schema.json
processors/native/face_processor/: CMakeLists.txt
processors/native/face_processor/src/: main.cpp
processors/native/image_backend_vips/: CMakeLists.txt  README.md
processors/native/image_backend_vips/src/: main.cpp
processors/native/image_processor/: CMakeLists.txt
processors/native/image_processor/include/av_imgdata_image/: cli.h  errors.h  image_loader.h  image_processor.h  json_io.h  result_writer.h  types.h
processors/native/image_processor/src/: cli.cpp  errors.cpp
scripts/: exiftool-wrapper  postinst  postuninst  postupgrade  preinst  preuninst  preupgrade  start-stop-status
src/: imgdata.py  requirements-optional-face-detection.txt  requirements-optional-insightface.txt  requirements.txt
src/api/: imgdata_api.py  session_manager.py  worker_admin_api.py  worker_api.py
src/av_imgdata/: __init__.py
src/face_detection_models/: README.md
src/handler/: core_handler.py  exiftool_handler.py  file_handler.py  photos_handler.py
src/models/: bbox.py  file_face.py  metadata_face.py  metadata_payload.py  photos_face.py
src/music/: __init__.py  ratings_mapping.py  service.py
src/parser/: __init__.py  acd_parser.py  iptc_regions_parser.py  metadata_parser.py  microsoft_parser.py  mwg_regions_parser.py  xmp_helpers.py
src/services/: bbox_normalizer.py  bbox_normlaizer.py  checks_workflow_service.py  config_service.py  exiftool_service.py  external_worker_gui_integration.py  external_worker_processor_service.py  face_coordinate_precision.py  face_detector.py  face_embedder.py  face_frame_matcher.py  (+26 more)
tests/: conftest.py  function_matrix.md  test_auto_apply_person_orchestration_callers.py  test_checks_findings_stop_action.py  test_checks_progress_counter_layout.py  test_checks_running_progress_persistence.py  test_checks_running_scan_reconnect_ui.py  test_checks_save_only_findings_helper.py  test_checks_save_only_flush.py  test_checks_save_only_flush_progress_bug.py  test_checks_save_only_status_findings_skipped.py  test_checks_saved_findings_review_contract.py  test_checks_scan_start_progress_state.py  test_checks_status_counters.py  test_checks_status_message_not_duplicated.py  test_config_service.py  test_display_face_normalization.py  test_exiftool_batch_reading.py  test_exiftool_context_bundling.py  test_exiftool_handler.py  test_exiftool_metadata_context_fallback.py  test_exiftool_persistent_reading.py  test_exiftool_service.py  test_exiftool_stop_timeout_contract.py  test_exiftool_ui_config_contract.py  test_face_detector.py  test_face_match_file_list_status.py  test_face_match_findings_apply_orchestration.py  test_face_match_findings_load_behavior.py  test_file_analysis_service.py  test_file_analysis_service_ap9.py  test_file_handler.py  test_imgdata_api_person_orchestration_routes.py  test_imgdata_exiftool_sidecars.py  test_insightface_face_match.py  test_iptc_analysis_counts.py  test_iptc_regions_parser.py  test_jpeg_context_reader.py  test_main_checks_scan_start_progress_state.py  test_metadata_face_create_with_name.py  (+21 more)
tools/: analyze-face-metadata.py  build-native-face-processor-linux.sh  build-native-face-processor-windows.sh  build-native-face-processor.sh  build-native-image-processor-vips-linux-chroot.sh  build-native-image-processor-vips-windows.sh  build-native-image-processor-vips.sh  build-package.sh  build-worker.sh  check_syntax_and_structure.py  create-worker-enrollment.py  diagnose-exiftool-problem-files.py  face-model-store.py  fetch-worker-native-deps.sh  fetch-worker-windows-deps.sh  functional-native-face-processor.sh  generate-worker-protocol.py  smoke-native-face-processor.sh  sync-worker-face-models.py  worker-api-http-router.py  worker-api-store.py  worker-local-api-runner.py
ui/: .eslintrc.cjs  Makefile  app.config  config.define  index.cgi  package.json  pnpm-lock.yaml  webpack.config.js
var/: config.json
worker/: CMakeLists.txt  README.md
worker/cmake/toolchains/: README.md  linux-x86_64.cmake  windows-mingw-x86_64.cmake
worker/config/: worker-config.example.json  worker-config.schema.json
worker/include/av_imgdata/: worker_protocol.h  worker_runtime.h
worker/jobs/: sample-worker-job.json
worker/packaging/unix/: initialize-av-imgdata-worker.sh  start-av-imgdata-worker.sh
worker/packaging/windows/: Initialize-AVImgDataWorker.ps1  README.md  Start-AVImgDataWorker.ps1
worker/protocol/: worker-protocol.json
worker/src/: api_loop.cpp  configure.cpp  main.cpp  model_sync.cpp
worker/tests/: runtime_test.cpp
(+189 files in other folders)
